# artifacts_calculator_project

./: .gitignore  README.md  codemagic.yaml  debug.keystore  gradle.properties  settings.gradle.kts  sync-gradle.sh
.github/workflows/: android-build.yml  generate-db.yml  release-build.yml
.idx/: dev.nix
PaddleOCR4Android/: build.gradle
app/: build.gradle.kts  proguard-rules.pro
app/libs/: PaddleOCR4Android-release.aar
app/src/androidTest/java/com/nokaori/genshinaibuilder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: PP_OCRv5_mobile_rec.ncnn.param  eslav_ppocrv5_rec.ncnn.param
app/src/main/assets/models/: dict.txt
app/src/main/java/com/nokaori/: GenshinBuilderApplication.kt  MainActivity.kt
app/src/main/java/com/nokaori/genshinaibuilder/: GenshinBuilderApplication.kt  MainActivity.kt
app/src/main/java/com/nokaori/genshinaibuilder/data/: Artifact.kt  ArtifactSet.kt
app/src/main/java/com/nokaori/genshinaibuilder/data/local/: AppDatabase.kt  Converters.kt  Migrations.kt
app/src/main/java/com/nokaori/genshinaibuilder/data/mapper/: ArtifactMapper.kt  CharacterMapper.kt  WeaponMapper.kt
app/src/main/java/com/nokaori/genshinaibuilder/di/: AppContainer.kt  DatabaseModule.kt  NetworkModule.kt  RepositoryModule.kt
app/src/main/java/com/nokaori/genshinaibuilder/manager/: ThemeManager.kt
app/src/main/java/com/nokaori/genshinaibuilder/presentation/: MainActivity.kt
app/src/main/java/com/nokaori/genshinaibuilder/ui/: ArtifactScreen.kt  MainActivity.kt
app/src/main/java/com/nokaori/genshinaibuilder/viewmodel/: ArtifactViewModel.kt  ThemeViewModel.kt
app/src/main/jni/: CMakeLists.txt  genshin_ocr_jni.cpp  ocr_jni.cpp  ppocrv5_dict.h  ppocrv5_full.cpp  ppocrv5_full.h
app/src/main/jni/ncnn/arm64-v8a/include/ncnn/: platform.h
app/src/main/jni/ncnn/armeabi-v7a/include/ncnn/: platform.h
app/src/main/jni/ncnn/riscv64/include/ncnn/: platform.h
app/src/main/jni/ncnn/x86/include/ncnn/: platform.h
app/src/main/jni/opencv/sdk/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake
app/src/main/res/drawable/: ic_stat_atk.xml  ic_stat_crit_dmg.xml  ic_stat_crit_rate.xml  ic_stat_def.xml  ic_stat_ele_mas.xml  ic_stat_ener_rech.xml  ic_stat_healing.xml  ic_stat_hp.xml  ic_stat_physical.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/test/java/com/nokaori/genshinaibuilder/: DatabaseExportTest.kt  ExampleUnitTest.kt  GenerateOfflineDbTest.kt
fastdeployOCR/: build.gradle
fastdeployOCR/src/main/assets/models/: dict.txt
fastdeployOCR/src/main/java/com/equationl/fastdeployocr/: OCR.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+263 files in other folders)
